--- a/config/kinematics.yaml
+++ b/config/kinematics.yaml
@@ -1,4 +1,4 @@
-manipulator_grup:
-  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+ur5_group_planning:
+  kinematics_solver: lma_kinematics_plugin/LMAKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
