--- a/config/ompl_planning.yaml
+++ b/config/ompl_planning.yaml
@@ -127,8 +127,7 @@ planner_configs:
     sparse_delta_fraction: 0.25  # delta fraction for connection distance. This value represents the visibility range of sparse samples. default: 0.25
     dense_delta_fraction: 0.001  # delta fraction for interface detection. default: 0.001
     max_failures: 5000  # maximum consecutive failure limit. default: 5000
-manipulator_grup:
-  default_planner_config: RRTstar
+ur5_group_planning:
   planner_configs:
     - AnytimePathShortening
     - SBL
@@ -154,5 +153,3 @@ manipulator_grup:
     - LazyPRMstar
     - SPARS
     - SPARStwo
-  projection_evaluator: joints(shoulder_pan_joint,shoulder_lift_joint)
-  longest_valid_segment_fraction: 0.005
